// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Tooltip Snapshots Simple render Should have children and by default shouldn't have arrow and should open on hover 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    <p
      class="children"
    >
      children
    </p>
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of bottom 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 15px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of bottom-end 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 15px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of bottom-start 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 15px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of left 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; right: 15px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of left-end 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; right: 15px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of left-start 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; right: 15px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of right 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 15px; top: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of right-end 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 15px; top: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of right-start 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 15px; top: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of top 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 15px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of top-end 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 15px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have offset:15px on opossite of top-start 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 15px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:bottom 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--bottom"
      style="position: absolute; margin: 0px; left: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:bottom-end 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--bottom-end"
      style="position: absolute; margin: 0px; left: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:bottom-start 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--bottom-start"
      style="position: absolute; margin: 0px; left: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:left 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; right: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--left"
      style="position: absolute; margin: 0px; top: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:left-end 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; right: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--left-end"
      style="position: absolute; margin: 0px; top: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:left-start 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; right: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--left-start"
      style="position: absolute; margin: 0px; top: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:right 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--right"
      style="position: absolute; margin: 0px; top: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:right-end 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--right-end"
      style="position: absolute; margin: 0px; top: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:right-start 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--right-start"
      style="position: absolute; margin: 0px; top: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:top 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--top"
      style="position: absolute; margin: 0px; left: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:top-end 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--top-end"
      style="position: absolute; margin: 0px; left: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have placement:top-start 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--top-start"
      style="position: absolute; margin: 0px; left: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have size:auto 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay brz-ed-tooltip--auto"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have size:large 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay brz-ed-tooltip--large"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have size:medium 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay brz-ed-tooltip--medium"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have size:small 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay brz-ed-tooltip--small"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render Should have size:xlarge 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay brz-ed-tooltip--xlarge"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render if element is in clickOutsideException onClick him tooltip shouldn't close 1`] = `
<div>
  <div
    class="click-outside__exception"
  />
  <div
    class="click-outside__not--exception"
  />
  <div
    class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
  >
    <div
      class="brz-ed-tooltip__content"
    >
      Children
    </div>
    <div
      class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
      style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render if element is in clickOutsideException onClick him tooltip shouldn't close 2`] = `
<div>
  <div
    class="click-outside__exception"
  />
  <div
    class="click-outside__not--exception"
  />
  <div
    class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
  >
    <div
      class="brz-ed-tooltip__content"
    >
      Children
    </div>
    <div
      class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
      style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render if element is in clickOutsideException onClick him tooltip shouldn't close 3`] = `
<div>
  <div
    class="click-outside__exception"
  />
  <div
    class="click-outside__not--exception"
  />
  <div
    class="brz-ed-tooltip brz-ed-tooltip__static"
  >
    <div
      class="brz-ed-tooltip__content"
    >
      Children
    </div>
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render if is in portal and portal node is provided should have brz-ed-tooltip__content-portal className as children of portalNode 1`] = `
<div
  class="brz-reset-all brz-ed-tooltip__content-portal"
>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render if is in portal should have brz-ed-tooltip__content-portal className 1`] = `
<div>
  <div
    class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
  >
    <div
      class="brz-ed-tooltip__content"
    >
      Children
    </div>
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render onFirstClick should be called onOpen in second onClose 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render onFirstClick should be called onOpen in second onClose 2`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render overlay should be overlay 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  >
    overlay
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render overlayClassName should be overlayClassName 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay overlayClassName"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render should call onOpen on mouseEnter and onClose on mouse leave 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render should call onOpen on mouseEnter and onClose on mouse leave 2`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render should open on hover and close without him 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render should open on hover and close without him 2`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render title should be title 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
    title="title"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render when is show Arrow should have children with className:brz-ed-arrow 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  >
    <div
      class="brz-ed-arrow brz-ed-arrow--top"
      style="position: absolute; margin: 0px; left: 0px;"
    />
  </div>
</div>
`;

exports[`Test Tooltip Snapshots Simple render when open on hover closeDelay should be 3000 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots Simple render when open on hover closeDelay should be 3000 2`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip__static brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    Children
  </div>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px;"
  />
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar Should have children and by default shouldn't have arrow and should open on hover 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    <p
      class="children"
    >
      children
    </p>
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar Should have size:auto 1`] = `<div />`;

exports[`Test Tooltip Snapshots render in Toolbar Should have size:large 1`] = `<div />`;

exports[`Test Tooltip Snapshots render in Toolbar Should have size:medium 1`] = `<div />`;

exports[`Test Tooltip Snapshots render in Toolbar Should have size:small 1`] = `<div />`;

exports[`Test Tooltip Snapshots render in Toolbar Should have size:xlarge 1`] = `<div />`;

exports[`Test Tooltip Snapshots render in Toolbar if element is in clickOutsideException onClick him tooltip shouldn't close 1`] = `
<div>
  <div
    class="click-outside__exception"
  />
  <div
    class="click-outside__not--exception"
  />
  <div
    class="brz-ed-tooltip brz-ed-tooltip--opened"
  >
    <div
      class="brz-ed-tooltip__content"
    >
      children
    </div>
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar if element is in clickOutsideException onClick him tooltip shouldn't close 2`] = `
<div>
  <div
    class="click-outside__exception"
  />
  <div
    class="click-outside__not--exception"
  />
  <div
    class="brz-ed-tooltip brz-ed-tooltip--opened"
  >
    <div
      class="brz-ed-tooltip__content"
    >
      children
    </div>
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar if element is in clickOutsideException onClick him tooltip shouldn't close 3`] = `
<div>
  <div
    class="click-outside__exception"
  />
  <div
    class="click-outside__not--exception"
  />
  <div
    class="brz-ed-tooltip"
  >
    <div
      class="brz-ed-tooltip__content"
    >
      children
    </div>
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar if portal node is provided should have brz-ed-tooltip__content-portal className as children of portalNode 1`] = `
<div
  class="brz-reset-all brz-ed-tooltip__content-portal"
>
  <div
    class="brz-ed-animated brz-ed-animated--fadeInUp brz-ed-tooltip__overlay"
  />
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar onFirstClick should be called onOpen in second onClose 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar onFirstClick should be called onOpen in second onClose 2`] = `
<div
  class="brz-ed-tooltip"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar overlay should be overlay 1`] = `<div />`;

exports[`Test Tooltip Snapshots render in Toolbar overlayClassName should be overlayClassName 1`] = `<div />`;

exports[`Test Tooltip Snapshots render in Toolbar should call onOpen on mouseEnter and onClose on mouse leave 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar should call onOpen on mouseEnter and onClose on mouse leave 2`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar should open on hover and close without him 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar should open on hover and close without him 2`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar title should be title 1`] = `<div />`;

exports[`Test Tooltip Snapshots render in Toolbar when is show Arrow should have children with className:brz-ed-arrow 1`] = `<div />`;

exports[`Test Tooltip Snapshots render in Toolbar when open on hover closeDelay should be 3000 1`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
</div>
`;

exports[`Test Tooltip Snapshots render in Toolbar when open on hover closeDelay should be 3000 2`] = `
<div
  class="brz-ed-tooltip brz-ed-tooltip--opened"
>
  <div
    class="brz-ed-tooltip__content"
  >
    children
  </div>
</div>
`;
